# restful-api-for-business-analysis

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  asgi.py  celery_main.py  pyproject.toml  pytest.ini  requirements.txt  wsgi.py
.github/workflows/: docker-image.yml
analyzer/: asgi.py  settings.py  urls.py  wsgi.py
apps/apis/: admin.py  mixins.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/apis/migrations/: 0001_initial.py
apps/users/: serializers.py  urls.py  views.py
clients/: client.http  pyclient.py
forecasters/: __init__.py  base.py  classification.py  clustering.py  sentiment_analysis.py  time_series.py
models/: task.py
scripts/: start.sh
settings/: .env.dev  .env.template  __init__.py  base.py
tests/: test_classfication.py  test_forecaster.py  test_forecasting.py  test_sentiment.py
utils/: ac_automaton.py
