[build-system]
requires = [
  "setuptools",
  "setuptools_scm",
  "wheel",
]

[tool.black]
line-length = 79
target-version = ['py38']  # (Optionally) specify the python version you'll run this code in
include = '\.pyi?$'

[tool.isort]
line_length = 79
py_version = 38  # (Optionally) specify the python version you'll run this code in so packages are correctly detected as stdlib or third-party (e.g. dataclasses pre/post py3.8)
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = "LOCALFOLDER"
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third-Party Libraries"
import_heading_firstparty = "Project Imports"

